@@ -1,5 +1,5 @@
 /*
- * Copyright © 2010-2012 inria.  All rights reserved.
+ * Copyright © 2010-2012 Inria.  All rights reserved.
  * Copyright © 2010-2011 Université Bordeaux 1
  * Copyright © 2011 Cisco Systems, Inc.  All rights reserved.
  * See COPYING in top-level directory.
@@ -34,16 +34,18 @@ extern "C" {
  * @{
  */
 
-/** \brief Return the domain, bus and device IDs of device \p device.
+/** \brief Return the domain, bus and device IDs of the CUDA device whose index is \p idx.
+ *
+ * Device index \p idx must match the local machine.
  */
 static __hwloc_inline int
 hwloc_cudart_get_device_pci_ids(hwloc_topology_t topology __hwloc_attribute_unused,
-			       int device, int *domain, int *bus, int *dev)
+				int idx, int *domain, int *bus, int *dev)
 {
   cudaError_t cerr;
   struct cudaDeviceProp prop;
 
-  cerr = cudaGetDeviceProperties(&prop, device);
+  cerr = cudaGetDeviceProperties(&prop, idx);
   if (cerr) {
     errno = ENOSYS;
     return -1;
@@ -62,18 +64,24 @@ hwloc_cudart_get_device_pci_ids(hwloc_topology_t topology __hwloc_attribute_unus
 }
 
 /** \brief Get the CPU set of logical processors that are physically
- * close to device \p device.
+ * close to device \p idx.
  *
- * For the given CUDA Runtime API device \p device, read the corresponding
- * kernel-provided cpumap file and return the corresponding CPU set.
+ * Return the CPU set describing the locality of the CUDA device
+ * whose index is \p idx.
+ *
+ * Topology \p topology and device \p idx must match the local machine.
+ * I/O devices detection and the CUDA component are not needed in the topology.
+ *
+ * The function only returns the locality of the device.
+ * If more information about the device is needed, OS objects should
+ * be used instead, see hwloc_cudart_get_device_osdev_by_index().
+ *
  * This function is currently only implemented in a meaningful way for
  * Linux; other systems will simply get a full cpuset.
- *
- * Topology \p topology must match the current machine.
  */
 static __hwloc_inline int
 hwloc_cudart_get_device_cpuset(hwloc_topology_t topology __hwloc_attribute_unused,
-			       int device, hwloc_cpuset_t set)
+			       int idx, hwloc_cpuset_t set)
 {
 #ifdef HWLOC_LINUX_SYS
   /* If we're on Linux, use the sysfs mechanism to get the local cpus */
@@ -82,7 +90,7 @@ hwloc_cudart_get_device_cpuset(hwloc_topology_t topology __hwloc_attribute_unuse
   FILE *sysfile = NULL;
   int domain, bus, dev;
 
-  if (hwloc_cudart_get_device_pci_ids(topology, device, &domain, &bus, &dev))
+  if (hwloc_cudart_get_device_pci_ids(topology, idx, &domain, &bus, &dev))
     return -1;
 
   if (!hwloc_topology_is_thissystem(topology)) {
@@ -107,23 +115,56 @@ hwloc_cudart_get_device_cpuset(hwloc_topology_t topology __hwloc_attribute_unuse
   return 0;
 }
 
-/** \brief Get the hwloc object for the PCI device corresponding
- * to device \p device.
+/** \brief Get the hwloc PCI device object corresponding to the
+ * CUDA device whose index is \p idx.
  *
- * For the given CUDA Runtime API device \p device, return the hwloc PCI
- * object containing the device. Returns NULL if there is none.
+ * Return the PCI device object describing the CUDA device whose
+ * index is \p idx. Return NULL if there is none.
  *
- * IO devices detection must be enabled in topology \p topology.
+ * Topology \p topology and device \p idx must match the local machine.
+ * I/O devices detection must be enabled in topology \p topology.
+ * The CUDA component is not needed in the topology.
  */
 static __hwloc_inline hwloc_obj_t
-hwloc_cudart_get_device_pcidev(hwloc_topology_t topology, int device)
+hwloc_cudart_get_device_pcidev(hwloc_topology_t topology, int idx)
 {
   int domain, bus, dev;
 
-  if (hwloc_cudart_get_device_pci_ids(topology, device, &domain, &bus, &dev))
+  if (hwloc_cudart_get_device_pci_ids(topology, idx, &domain, &bus, &dev))
     return NULL;
 
   return hwloc_get_pcidev_by_busid(topology, domain, bus, dev, 0);
+}
+
+/** \brief Get the hwloc OS device object corresponding to the
+ * CUDA device whose index is \p idx.
+ *
+ * Return the OS device object describing the CUDA device whose
+ * index is \p idx. Return NULL if there is none.
+ *
+ * The topology \p topology does not necessarily have to match the current
+ * machine. For instance the topology may be an XML import of a remote host.
+ * I/O devices detection and the CUDA component must be enabled in the topology.
+ * If not, the locality of the object may still be found using
+ * hwloc_cudart_get_device_cpuset().
+ *
+ * \note The corresponding PCI device object can be obtained by looking
+ * at the OS device parent object.
+ *
+ * \note This function is identical to hwloc_cuda_get_device_osdev_by_index().
+ */
+static __hwloc_inline hwloc_obj_t
+hwloc_cudart_get_device_osdev_by_index(hwloc_topology_t topology, unsigned idx)
+{
+	hwloc_obj_t osdev = NULL;
+	while ((osdev = hwloc_get_next_osdev(topology, osdev)) != NULL) {
+		if (HWLOC_OBJ_OSDEV_GPU == osdev->attr->osdev.type
+		    && osdev->name
+		    && !strncmp("cuda", osdev->name, 4)
+		    && atoi(osdev->name + 4) == (int) idx)
+			return osdev;
+	}
+	return NULL;
 }
 
 /** @} */
